# aclrtagntcaidepth

./: README.md
Lab 1/: Lab 1.md
Lab 10/: Lab 10.md
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/: .env.sample  AGENT_SELECTION_FEATURE.md  Dockerfile  backend.py  pyproject.toml  requirements.txt
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/react-frontend/: .prettierrc.cjs  Dockerfile  eslint.config.js  index.html
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/react-frontend/src/: App.jsx
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/react-frontend/src/components/: AgentSelector.jsx  AppHeader.jsx  ChatInput.jsx  ErrorBoundary.jsx  InternalProcessDrawer.jsx  NotificationSnackbar.jsx  OrchestratorEvent.jsx  index.js
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/react-frontend/src/constants/: index.js
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/react-frontend/src/hooks/: index.js  useChat.js
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/react-frontend/src/services/: api.js  websocket.js
LabFiles/OpenAIWorkshop-Framework/agentic_ai/applications/react-frontend/src/theme/: index.js
LabFiles/OpenAIWorkshop-main (1)/OpenAIWorkshop-main/agentic_ai/workflow/fraud_detection_durable/: .env.sample  backend.py  pyproject.toml
LabFiles/OpenAIWorkshop-main (1)/OpenAIWorkshop-main/agentic_ai/workflow/fraud_detection_durable/ui/: .dockerignore  .eslintrc.cjs  package-lock.json  vite.config.js
LabFiles/OpenAIWorkshop-main (1)/OpenAIWorkshop-main/agentic_ai/workflow/fraud_detection_durable/ui/src/components/: WorkflowVisualizer.jsx
LabFiles/OpenAIWorkshop-main (1)/OpenAIWorkshop-main/agentic_ai/workflow/fraud_detection_durable/ui/src/constants/: workflow.js
LabFiles/OpenAIWorkshop-main (1)/OpenAIWorkshop-main/agentic_ai/workflow/fraud_detection_durable/ui/src/theme/: index.js
(+157 files in other folders)
