[project]
name = "applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework==1.0.0b260130",
    "azure-ai-evaluation>=1.14.0",
    "azure-ai-projects>=2.0.0b2",
    "azure-cosmos==4.9.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "fastapi==0.115.12",
    "flasgger==0.9.7.1",
    "flask==3.0.3",
    "httpx==0.28.1",
    "msal==1.31.0",
    "openai>=2.5.0",
    "pydantic==2.11.4",
    "python-dotenv>=1.1.1",
    "requests==2.32.4",
    "streamlit==1.45.0",
    "tenacity==8.5.0",
    "uvicorn>=0.25.0",
    "websockets>=15.0.1",
]

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "azure-identity>=1.26.0b1",
    "azure-keyvault-secrets>=4.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
