[project]
name = "fraud-detection-durable"
version = "0.1.0"
description = "Durable Fraud Detection Workflow - Hybrid Workflow + Durable Task Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Agent Framework (includes azure sub-package)
    "agent-framework==1.0.0b260130",
    
    # Observability
    "azure-monitor-opentelemetry>=1.8.5",
    
    # Durable Task Scheduler
    "durabletask-azuremanaged>=1.0.0a1",
    
    # FastAPI Backend
    "fastapi==0.115.12",
    "uvicorn>=0.25.0",
    "websockets>=15.0.1",
    
    # Azure & Auth
    "azure-identity>=1.15.0",
    
    # HTTP & Tools
    "httpx==0.28.1",
    "pydantic==2.11.4",
    
    # Environment
    "python-dotenv>=1.0.0",
]

[tool.uv]
prerelease = "allow"
